deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: beautyduty-ingress
spec:
  rules:
    - host: www.beautydutyday.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: beautyduty-api-service
                port:
                  number: 4900
